--- a/app/src/main/res/layout/layout_post_link.xml
+++ b/app/src/main/res/layout/layout_post_link.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shadow_205452"
@@ -9,7 +10,8 @@
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_post_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        app:viewAspectRatio="1.5" />
 
     <TextView
         android:id="@+id/tv_post_link_title"
@@ -29,7 +31,7 @@
     <TextView
         android:id="@+id/tv_post_link_caption"
         style="@style/AppTheme.TextView.Link"
-        android:textColor="@android:color/darker_gray"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/darker_gray" />
 </LinearLayout>
